--- a/Python_Fundamentals_Week_1.ipynb
+++ b/Python_Fundamentals_Week_1.ipynb
@@ -215,14 +215,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "04c4aa1a-0ef7-4c5b-9f72-39c3f7b53710",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Variable declaration and assignment\n",
     "name = \"Kaku Armoo\"\n",
-    "hometown = \"Ngalekyi\""
+    "hometown = \"Ngalekyi\"\n",
+    "sister = 'Homa'"
    ]
   },
   {
@@ -236,14 +237,16 @@
      "output_type": "stream",
      "text": [
       "Kaku Armoo\n",
-      "Ngalekyi\n"
+      "Ngalekyi\n",
+      "Homa\n"
      ]
     }
    ],
    "source": [
     "# output\n",
     "print(name)\n",
-    "print(hometown)"
+    "print(hometown)\n",
+    "print(sister)"
    ]
   },
   {
@@ -270,13 +273,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbef9ff9",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "22a447c3-66bd-421c-a636-294c3743ecad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Armoo\n",
+      "Adjoechie & Homa\n"
+     ]
+    }
+   ],
    "source": [
-    "# Example of a variable that follows Python naming conventions\n"
+    "# Example of a variable that follows Python naming conventions\n",
+    "last_name = 'Armoo'\n",
+    "sister1 = 'Adjoechie'\n",
+    "sister2 = 'Homa'\n",
+    "\n",
+    "# 1sister = 'Adjoechie' \"1sister\" can't be a variable as variables can't start with numbers\n",
+    "\n",
+    "\n",
+    "print(last_name)\n",
+    "print(sister1 + ' ' + '&' + ' ' + sister2)"
    ]
   },
   {
@@ -327,9 +354,30 @@
    "execution_count": null,
    "id": "2b688f87-0b03-4272-a565-c9055ee125ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "23-06-1993\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print the value of the age variable\n"
+    "# Print the value of the age variable\n",
+    "age = 30\n",
+    "dob = '23-06-1993'\n",
+    "\n",
+    "print(age)\n",
+    "print(dob)\n",
+    "\n",
+    "# assume that a new age variable is created, when age is printed, the new age is what will be displayed as it will overwrite the old variable\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -375,17 +423,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Changing the value of a variable\n"
+    "# Changing the value of a variable\n",
+    "age = 31"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "88c0eec3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
    "source": [
-    "# Output\n"
+    "# Output\n",
+    "print(age)"
    ]
   },
   {
@@ -408,31 +466,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "6e537ed9-fa87-4891-aa36-eed2c87530da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Examples\n"
+    "# Examples\n",
+    "integer = 23\n",
+    "float_number = 2.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7e92c204",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# output  -- sum\n"
+    "# output  -- sum\n",
+    "result = integer + float_number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "445e52f1-a1f7-4c60-aef5-4f5b6b76499d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -468,30 +539,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ad34384f-0673-4bf9-b439-ebc3ab50c54e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Adds two numbers together to find their sum\n"
+    "# Adds two numbers together to find their sum\n",
+    "sum_of_numbers = 23 + 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "848bf44b-22ab-4ddb-969f-4af6caa6283c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum_of_numbers)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "50160a26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The sum plus a number\n"
+    "# The sum plus a number\n",
+    "new_sum = sum_of_numbers + 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eb0bd2f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(new_sum)"
    ]
   },
   {
@@ -504,12 +605,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "961613a3-f7cd-4826-8a08-80142de3a6d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Finds the difference between two numbers through subtraction\n"
+    "# Finds the difference between two numbers through subtraction\n",
+    "sub_of_numbers = new_sum - 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b6db2b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum_of_numbers)"
    ]
   },
   {
@@ -522,21 +642,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ef694a91-b245-42e7-a7d7-7ec9a9fec81b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "667\n"
+     ]
+    }
+   ],
    "source": [
-    "# Multiplies two numbers, representing the process of repeated addition using the * operator\n"
+    "# Multiplies two numbers, representing the process of repeated addition using the * operator\n",
+    "print(integer * sum_of_numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "7933b643-969f-4077-b600-3bc21b2ac52a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "115\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(23 * 5)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -551,9 +690,21 @@
    "execution_count": null,
    "id": "46297d75-2e0e-44f9-bb9a-eb0455add7c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2608695652173914\n",
+      "56.666666666666664\n"
+     ]
+    }
+   ],
    "source": [
-    "# Determines how many times one number is contained within another\n"
+    "# Determines how many times one number is contained within another\n",
+    "# this returns the whole division results ie. the whole numbers and remainders\n",
+    "print(sum_of_numbers / integer)\n",
+    "print(340 / 6)"
    ]
   },
   {
@@ -561,9 +712,19 @@
    "execution_count": null,
    "id": "bdffd0c8-6fab-455b-83d7-591d39142a5e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# Absolute Division\n"
+    "# Absolute Division # this is \"//\"\n",
+    "# the absolute division returns only the \"whole numbers\" in the division without the remainders\n",
+    "print(sum_of_numbers // integer)"
    ]
   },
   {
@@ -571,26 +732,21 @@
    "execution_count": null,
    "id": "6817cf6b-7ac6-47ae-9601-bdfca4e26011",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Modulus\n"
+    "# Modulus # this is \"%\"\n",
+    "# this returns only the remainders without the \"whole numbers\"\n",
+    "\n",
+    "print(sum_of_numbers % integer)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a569ddd6-a85c-4bab-84f9-5fbb14e9e5fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "88c93837-b764-4921-aeb9-d8ec4a138235",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -602,30 +758,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b545f89a-619f-4318-bad8-024b7c28745a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "243\n"
+     ]
+    }
+   ],
    "source": [
-    "# Raises one number to the power of another using the ** operator\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "093306c9-6f74-4e7e-b981-43d866e97c77",
-   "metadata": {},
-   "source": [
-    "#### Modulus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e6b6a44-bee4-4f7e-9ae3-c6ef4bd59f9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Returns the remainder when one number is divided by another using the % operator\n"
+    "# Raises one number to the power of another using the ** operator\n",
+    "# to print 3 power 5, we use the exponentiation as below \n",
+    "\n",
+    "print(3 ** 5)"
    ]
   },
   {
