--- a/Python_Fundamentals_Week_1.ipynb
+++ b/Python_Fundamentals_Week_1.ipynb
@@ -1436,7 +1436,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Examples of Strings\n"
+    "# Examples of Strings\n",
+    "'Kaku Armoo'\n",
+    "'23' # if the 23 is without a the '' or \"\" then it becomes a number \n",
+    "'!'\n",
+    "' '\n",
+    "# or \n"
    ]
   },
   {
@@ -1463,27 +1468,63 @@
    "outputs": [],
    "source": [
     "# Example where double quotes are appropriate\n",
-    "\n"
+    "\n",
+    "# the style of definining a string either with \"\" or '' must be constitent. for instance\n",
+    "\n",
+    "\"Kaku Armoo\"\n",
+    "'Kaku Armoo'\n",
+    "'Kaku Armoo\" # this is not acceptable "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3230ce48-773c-4272-8d39-ba86cf4e2fb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kaku Armoo's big Sister is Adjoechie\n",
+      "Kaku Armoo's big Sister is Adjoechie\n"
+     ]
+    }
+   ],
    "source": [
-    "# Example where single quotes are appropriate\n"
+    "# Example where single quotes are appropriate\n",
+    "# It is mostly recommended to use \"\" in srings that have ' in them. for instance\n",
+    "\n",
+    "short_message = \"Kaku Armoo's big Sister is Adjoechie\"\n",
+    "\n",
+    "print(short_message)\n",
+    "\n",
+    "# In the case of sticking to '' , then it is best to use escape character (\\) in the event that the strings have ' in them. for instance \n",
+    "\n",
+    "short_message2 = 'Kaku Armoo\\'s big Sister is Adjoechie'\n",
+    "\n",
+    "print(short_message2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9df56b4d-e91a-4405-86f0-d1c553158432",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My best motivation is \"Do you best in everything you do so that when given another chance, there will be nothing more to add.\"\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "#another example of where '' is appropriate \n",
+    "\n",
+    "short_message3 = 'My best motivation is \"Do you best in everything you do so that when given another chance, there will be nothing more to add.\"'\n",
+    "print(short_message3)\n"
    ]
   },
   {
@@ -1504,12 +1545,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ea3f91e2-452e-4035-987a-8aebe4bff787",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "I am going go do my best to be a Data Analyst. \n",
+      "This will be very useful to understand the performances of my businesses as well as the businesses of others \n",
+      "\n",
+      "\n",
+      "I am going go do my best to be a Data Analyst. \n",
+      "This will be very useful to understand the performances of my businesses as well as the businesses of others \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Example of Multiline String\n"
+    "# Example of Multiline String\n",
+    "short_message4 = '''\n",
+    "I am going go do my best to be a Data Analyst. \n",
+    "This will be very useful to understand the performances of my businesses as well as the businesses of others \n",
+    "'''\n",
+    "print(short_message4)\n",
+    "\n",
+    "# or you can also use \"\"\"\"\"\"\n",
+    "\n",
+    "short_message5 = \"\"\"\n",
+    "I am going go do my best to be a Data Analyst. \n",
+    "This will be very useful to understand the performances of my businesses as well as the businesses of others \n",
+    "\"\"\"\n",
+    "\n",
+    "print(short_message5)"
    ]
   },
   {
@@ -1562,23 +1632,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ef2eb059-8c0b-4b45-8b6f-84e4c655e935",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kaku Armoo\n"
+     ]
+    }
+   ],
    "source": [
-    "# String Concatenation\n"
+    "# String Concatenation\n",
+    "\n",
+    "# using the + to concatenate strings \n",
+    "# full_name = first_name + \" \" + last_name\n",
+    "\n",
+    "first_name = 'Kaku'\n",
+    "last_name = 'Armoo'\n",
+    "\n",
+    "print(first_name + ' ' + last_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a2a50ca1-8abd-4135-8b97-e11c2e57df68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kaku Armoo\n"
+     ]
+    }
+   ],
    "source": [
+    "# using the f string to concatenate strings\n",
+    "first_name = 'Kaku'\n",
+    "last_name = 'Armoo'\n",
+    "fullname = f'{first_name} {last_name}'\n",
     "\n",
-    "# full_name = first_name + \" \" + last_name\n"
+    "print(fullname)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1607,12 +1707,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "664fbd68-713d-48c7-8091-4a9d3dcfb76c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K-Cash K-Cash K-Cash K-Cash K-Cash \n"
+     ]
+    }
+   ],
    "source": [
-    "# Repetition of a String\n"
+    "# Repetition of a String\n",
+    "#this is used to repeat strings based on the number you will specify with the * sign \n",
+    "\n",
+    "name = 'K-Cash ' * 5\n",
+    "print(name)\n"
    ]
   },
   {
