--- a/Python_Fundamentals_Week_1.ipynb
+++ b/Python_Fundamentals_Week_1.ipynb
@@ -2260,7 +2260,7 @@
    "id": "22b95ad2-bc0f-4c3a-a89d-b7c5b1cd3a23",
    "metadata": {},
    "source": [
-    "Now that we've covered some basics in Pythoon, let's discuss best practices:\n",
+    "Now that we've covered some basics in Python, let's discuss best practices:\n",
     "\n",
     "- **Readability**: Write code that is easy to read. Use descriptive or meaningful variable names and add comments where necessary.\n",
     "\n",
@@ -2297,12 +2297,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "75d84388-2e3a-4e03-8a29-829e3760884f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your username is KAKUCASHIOUS\n",
+      "Your transformed username is kakucashious\n"
+     ]
+    }
+   ],
    "source": [
-    "# Answer Exercise 1 Here\n"
+    "# Answer Exercise 1 Here\n",
+    "username = input('Please, enter your username.') # this allows the user to enter his / her username in the pop up\n",
+    "# username_upper = upper(username)\n",
+    "# username_lower = lower(username_upper)\n",
+    "\n",
+    "print(f\"Your username is {username.upper()}\") # this is the original format\n",
+    "print(f\"Your transformed username is {username.lower()}\") # this is the transformed format according to the request "
    ]
   },
   {
