A bit of changes

--- a/Python_Fundamentals_Week_2.ipynb
+++ b/Python_Fundamentals_Week_2.ipynb
@@ -111,6 +111,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6f65c38c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__class_getitem__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__iadd__',\n",
+       " '__imul__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__reversed__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'append',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'count',\n",
+       " 'extend',\n",
+       " 'index',\n",
+       " 'insert',\n",
+       " 'pop',\n",
+       " 'remove',\n",
+       " 'reverse',\n",
+       " 'sort']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir([]) # this shoes gives a detailed list of comands and attributes "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "99946927",
    "metadata": {},
@@ -216,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "215a07eb-c0a3-43f0-b161-e7a726d98336",
    "metadata": {},
    "outputs": [
@@ -233,7 +301,7 @@
        "tuple"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +313,32 @@
     "\n",
     "siblings = 'Adjoechie', 'Homa', 'Amichia', 'Kpanyi'\n",
     "print(siblings)\n",
-    "type(siblings) # checking the type of the variable (siblings)"
+    "type(siblings) # checking the type of the variable (siblings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a50874e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "siblings = 'Adjoechie', 'Homa', 'Amichia', 'Kpanyi'\n",
+    "len(siblings) # this counts the number of elements contained in a list \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -783,6 +876,80 @@
    "metadata": {},
    "source": [
     "Slicing a list in Python refers to the technique of **extracting a portion of a list to create a new list**. This is achieved by specifying a range of indices using the **colon (:) operator** within square brackets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "89ac83cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Adjoechie', 'Homa', 'Amichia', 'Kpanyi')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(siblings)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4139cbf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Kpanyi'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if I want the 3 element in the siblings list. I can use the index below\n",
+    "# important to note that the indexing starts numbering from 0 so the first element in the list has 0 index, second element has 1 index and so on\n",
+    "siblings[2] # this finds the 3rd element in the list \n",
+    "siblings[3] # this finds the 4th element in the list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc09b83c",
+   "metadata": {},
+   "source": [
+    "inserting elements into a list with indeces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "732ae85c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Adjoechie', 'Homa', 'Amichia', 'Kpanyi')\n",
+      "('Adjoechie', 'Homa', 'Amichia', 'Kpanyi')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# assume I want to insert the name \"Ama\" into the siblings list into the index 2\n",
+    "\n",
+    "print(siblings)\n",
+    "# siblings.insert(2, 'Ama')\n",
+    "print(siblings)\n",
+    "\n"
    ]
   },
   {
