--- a/Python_Fundamentals_Week_3.ipynb
+++ b/Python_Fundamentals_Week_3.ipynb
@@ -73,6 +73,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7edca4f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating a function that greets using the name of an individual \n",
+    "def greet(name):\n",
+    "    '''This is a function that greets using the name of an individual '''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a06b18cf-f2e8-4404-a043-2d51ed69fc43",
    "metadata": {},
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "07cc64d2-c654-4394-9ad9-0c49d5376590",
    "metadata": {},
    "outputs": [],
@@ -94,34 +106,61 @@
     "# Example \n",
     "\n",
     "\n",
-    "#defining a function\n"
+    "#defining a function\n",
+    "\n",
+    "# creating a function that greets using the name of an individual with a return statement\n",
+    "def greet(name):\n",
+    "    '''This is a function that greets using the name of an individual '''\n",
+    "    return f\"Hello, {name}!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1c155e9f-b3d2-4710-ac14-be5990122cc4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bf1d7d98-29c0-4d9b-91e9-b8cc3f0ca8e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Adjoechie!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calling a Function"
+    "# Calling a Function\n",
+    "\n",
+    "print(greet(\"Adjoechie\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "583f5788-d737-42f8-9c17-ba080c6e5589",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "720\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating a function with a function body\n",
+    "\n",
+    "def factorial(n):\n",
+    "    '''This finds the factorial of a number based on the given number'''\n",
+    "    # n factorial = n * (n-1)\n",
+    "    # 3 factorial = 3 * (3-1) * (3-2) (3-3) # this and the line above are comments to explain how the factorial works \n",
+    "    if n == 0:\n",
+    "        return 1\n",
+    "    return n * factorial(n-1) # this and the two lines above is the body of the function\n",
+    "\n",
+    "print(factorial(6))\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -136,29 +175,65 @@
     "# Providing arguments to function in the order of parameters of the function\n",
     "\n",
     "\n",
-    "\n",
+    " \n",
     "#method 2 - use keyword argument\n",
     "# Specifying which argument is for which parameter\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "10d444ff-9148-42b7-a310-aa56afdbfc3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, Armoo Jemima!'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Example -- Positional "
+    "# Example -- Positional \n",
+    "# with positional argument, the return statement must follow the same logic as the parameter\n",
+    "\n",
+    "def greet(last_name, first_name):\n",
+    "    '''This is a function that greets using the last and first names of an individual '''\n",
+    "    return f\"Hello, {last_name} {first_name}!\"\n",
+    "\n",
+    "greet(\"Armoo\", \"Jemima\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "30ea4500-9482-4b9f-9634-7af0c6e6072a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, Armoo Gloria!'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Example -- Keyword"
+    "# Example -- Keyword\n",
+    "\n",
+    "def greet(last_name, first_name):\n",
+    "    '''This is a function that greets using the last and first names of an individual '''\n",
+    "    return f\"Hello, {last_name} {first_name}!\"\n",
+    "\n",
+    "greet(first_name = \"Gloria\", last_name = \"Armoo\") # with keyword arguments, regardless of the position of the argument(last and first names), the results will be printed in the order \n",
+    "                                                    # specified in the return statement"
    ]
   },
   {
@@ -170,11 +245,75 @@
    "source": [
     "# function with two arguments\n",
     "\n",
+    "def greet(last_name, first_name):\n",
+    "    '''This is a function that greets using the last and first names of an individual '''\n",
+    "    return f\"Hello, {last_name} {first_name}!\" # the last_name and the first_name are two different arguments \n",
+    "\n",
+    "greet(\"Armoo\", \"Jemima\")\n",
     "\n",
     "\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "05a875fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# function with no argument\n",
+    "# with this, the parameter is left empty\n",
     "\n",
-    "# function with no argument\n"
+    "def addition():\n",
+    "    '''this adds two different numbers'''\n",
+    "    num1 = 23\n",
+    "    num2 = 9\n",
+    "    addition = num1 + num2\n",
+    "    return (addition)\n",
+    "\n",
+    "addition()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6f7ec88e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.5"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creating a dynamic function to without argument to divid two numbers\n",
+    "def division():\n",
+    "    num3 = int(input(\"Enter the numerator\"))\n",
+    "    num4 = int(input(\"Enter the denomerator\"))\n",
+    "    '''This divides the two numbers entered above'''    \n",
+    "    division = num3 / num4\n",
+    "    return (division)\n",
+    "\n",
+    "division()"
    ]
   },
   {
@@ -204,6 +343,64 @@
     "   \n",
     "Write a program that determines whether a given year is a leap year.         \n",
     "A normal year has 365 days, leap years have 366 with an extra day in February."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f090577b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a normal year with 365 days\n"
+     ]
+    }
+   ],
+   "source": [
+    "def leap_year(year):\n",
+    "    if (year % 4 == 0 and (year % 100 != 0 or year % 400 == 0)):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "year = int(input(\"Please enter the year: \"))\n",
+    "\n",
+    "\n",
+    "\n",
+    "if leap_year(year):\n",
+    "    print(f\"This is a leap year with 366 days\")\n",
+    "else:\n",
+    "    print(f\"This is a normal year with 365 days\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cfb6cf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The year you have entered is a leap year with 366 days; it has an extra day in February\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = int(input(\"Please, enter the year: \")) # this is takes the year input of the person \n",
+    "def leap_year_check (year):\n",
+    "    if (year % 4 == 0 and (year % 100 != 0 or year % 400 == 0)): # this is the argument to see if the year entered is a leap year or not\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "if leap_year_check(year):\n",
+    "    print(f\"The year you have entered is a leap year with 366 days; it has an extra day in February\")\n",
+    "else:\n",
+    "    print(f\"The year you have entered is a normal year with 365 days; it has no extra day in February\")\n"
    ]
   },
   {
@@ -331,7 +528,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +542,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
