Revised and completed Work 2

--- a/Python_Fundamentals_Week_3.ipynb
+++ b/Python_Fundamentals_Week_3.ipynb
@@ -93,12 +93,12 @@
     "\n",
     "Return statements give you a result that you can use for something else. It doesn’t have to be something that prints when the function is run.     \n",
     "\n",
-    "Print statements print something to the console and nothing more. "
+    "\"Print statements\" print something to the console and nothing more. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "07cc64d2-c654-4394-9ad9-0c49d5376590",
    "metadata": {},
    "outputs": [],
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "bf1d7d98-29c0-4d9b-91e9-b8cc3f0ca8e4",
+   "execution_count": 5,
+   "id": "eb0547fe",
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +132,32 @@
     "# Calling a Function\n",
     "\n",
     "print(greet(\"Adjoechie\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1280f46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo, Kcash\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating a dynamic function that returns the name of a person based on a input\n",
+    "\n",
+    "name1 = input(\"What is your name?\")\n",
+    "\n",
+    "def greet (name):\n",
+    "    '''This function greets a person based on the input given'''\n",
+    "    return f\"Hallo, {name1}\"\n",
+    "\n",
+    "print(greet(name1))"
    ]
   },
   {
@@ -160,6 +186,33 @@
     "    return n * factorial(n-1) # this and the two lines above is the body of the function\n",
     "\n",
     "print(factorial(6))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a95836c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating a dynamic function that calculates the factorial of a given number entered\n",
+    "\n",
+    "number = int(input(\"What number do you want to find its factorial?\")) # this line collects the number of the person for which its factorial is to be calculated \n",
+    "def factorial_1(number): # this is the def, function name and parameters\n",
+    "    if number == 0: # this is the body of the function\n",
+    "        return 1\n",
+    "    return number * factorial_1(number - 1) # ''' this line and the above line are the return statement. it meens that if the number you will enter is 0, the answer should be 1 else it \n",
+    "                                                    # should be calculated as in the above cell''' \n",
+    "\n",
+    "print(factorial_1(number))"
    ]
   },
   {
@@ -418,11 +471,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d0a84413-066a-4e66-93ae-ad651afae836",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid username 😊\n"
+     ]
+    }
+   ],
+   "source": [
+    "username = input(\"Please, enter your username\") # this allows the user to enter his username \n",
+    "\n",
+    "# the function below checks the characters of the username and clasifies it as true if the characters are between 8 and 15; false if either less than 8 or more than 15 \n",
+    "def name_check(username): \n",
+    "    ''' This function checks if the username of a person is valid or not'''\n",
+    "    if len(username) >= 8 and len(username) <= 15:\n",
+    "        return True\n",
+    "    else:\n",
+    "        False\n",
+    "# the lines below prints the results from the above checks\n",
+    "if name_check(username):\n",
+    "    print(f\"Valid username 😊\")\n",
+    "else:\n",
+    "    print(f\"Your username is not valid 😒\")"
+   ]
   },
   {
    "cell_type": "code",
