--- a/Python_Fundamentals_Week_3.ipynb
+++ b/Python_Fundamentals_Week_3.ipynb
@@ -524,7 +524,7 @@
     "* ### A single python file containing code\n",
     "* ### It contains variable, functions, classes.\n",
     "* ### Their context can be resuse in other code without having to rewrite them.\n",
-    "* ### The help in organising our code and making it more manageable.\n",
+    "* ### They help in organising our code and making it more manageable.\n",
     "* ### To use a code in a `module`, we use `import` sometimes in combination with `from`"
    ]
   },
@@ -569,11 +569,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "84544680-1e84-4eee-b199-09f59ac13827",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-01-13 21:21:58.893829\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this is a built-in module that checks the current date and time \n",
+    "\n",
+    "import datetime\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "print(now)"
+   ]
   },
   {
    "cell_type": "markdown",
