numpy installed and first used

--- a/Python_Fundamentals_Week_3.ipynb
+++ b/Python_Fundamentals_Week_3.ipynb
@@ -616,6 +616,35 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "869c7363",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[170 140 162 168]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# [90, 65, 75, 79] -- maths scores\n",
+    "# [80, 75, 87, 89] -- english score\n",
+    "math_score = np.array([90, 65, 75, 79])\n",
+    "english_score = np.array([80, 75, 87, 89])\n",
+    "\n",
+    "# to find the total score\n",
+    "\n",
+    "total_score = math_score + english_score\n",
+    "\n",
+    "print(total_score)"
+   ]
   }
  ],
  "metadata": {
