--- a/Python_Fundamentals_Week_3.ipynb
+++ b/Python_Fundamentals_Week_3.ipynb
@@ -645,6 +645,437 @@
     "\n",
     "print(total_score)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dbaa295",
+   "metadata": {},
+   "source": [
+    "Iteration \n",
+    "\n",
+    "A common idiom when dealing with sequences is to loop over the content of the sequence. You might want to filter out one of the items, apply a function to it or print it out. LOOP is one way to achieve this. The \"FOR\" in a LOOP is very important to achieve all the Loop function. See the example below"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78c401ba",
+   "metadata": {},
+   "source": [
+    "The two examples below are for LOOPING WITHOUT INDEX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5bb7e456",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n",
+      "a\n",
+      "s\n",
+      "h\n",
+      "i\n",
+      "u\n",
+      "o\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The function below, the \"for\" allows print to enter the string and return all the elements in a transposed form. \n",
+    "\n",
+    "for letter in ['c', 'a', 's' ,'h', 'i', 'u', 'o', 's']:\n",
+    "    print(letter) # this is the CODE BLOCK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5e279cf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this returns the last element in the loop above \n",
+    "\n",
+    "print(letter) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "155509e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maame Bomo\n",
+      "Auntie Ena\n",
+      "DeKerm\n",
+      "Sis. Adjoechie\n",
+      "Homa\n",
+      "Amichia\n",
+      "Maame Yeboah\n",
+      "Maame Araba\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example 2. Loop of Family Members\n",
+    "\n",
+    "# this is the string containing all the names of the family members \n",
+    "for member in ['Maame Bomo', 'Auntie Ena', 'DeKerm', 'Sis. Adjoechie', 'Homa', 'Amichia', 'Maame Yeboah', 'Maame Araba',]:\n",
+    "    print(member)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4593b7f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maame Araba\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(member) # this returns the last element in the string which is \"Maame Araba\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ff17441",
+   "metadata": {},
+   "source": [
+    "LOOPING WITH INDEX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f520b224",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 0 --> Value Maame Bomo\n",
+      "index 1 --> Value Auntie Ena\n",
+      "index 2 --> Value DeKerm\n",
+      "index 3 --> Value Sis. Adjoechie\n",
+      "index 4 --> Value Homa\n",
+      "index 5 --> Value Amichia\n",
+      "index 6 --> Value Maame Yeboah\n",
+      "index 7 --> Value Maame Araba\n"
+     ]
+    }
+   ],
+   "source": [
+    "# the loop below assigns index numbers to each element in the string\n",
+    "\n",
+    "family_member = ['Maame Bomo', 'Auntie Ena', 'DeKerm', 'Sis. Adjoechie', 'Homa', 'Amichia', 'Maame Yeboah', 'Maame Araba']\n",
+    "\n",
+    "for index in range(len(family_member)):\n",
+    "    print(f\"index {index} --> Value {family_member[index]}\") # This is to assign the "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "22e7a0f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index 7 --> Maame Bomo\n",
+      "index 7 --> Auntie Ena\n",
+      "index 7 --> DeKerm\n",
+      "index 7 --> Sis. Adjoechie\n",
+      "index 7 --> Homa\n",
+      "index 7 --> Amichia\n",
+      "index 7 --> Maame Yeboah\n",
+      "index 7 --> Maame Araba\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item, value in enumerate(family_member): # check this because the index numbering is not correct\n",
+    "    print(f\"index {index} --> {value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef1a1185",
+   "metadata": {},
+   "source": [
+    "Breaking the Loop\n",
+    "\n",
+    "Here, we can assign a condition such that when that condition is met, the code stops. See example below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0036a857",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Breaking the loop the code stops when it reaches a negative number \n",
+    "\n",
+    "# here, the code will add 2, 3, 5, 7, 4. Since -2 is < 0, no further addition will be made.\n",
+    "\n",
+    "numbers = [2, 3, 5, 7, 4, -2, 3, 4, 9]\n",
+    "result = 0\n",
+    "\n",
+    "for item in numbers:\n",
+    " if item < 0:\n",
+    "  break # this stops the code when it meets a number < 0\n",
+    " \n",
+    " else:\n",
+    "  result += item\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a12efdba",
+   "metadata": {},
+   "source": [
+    "Skipping over item in a loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "33e5a612",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "47\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in the example below, using the \"continue\" keyword will skip the negative number and continue to add all the positive numbers\n",
+    "\n",
+    "numbers = [2, 3, 5, 7, 4, -2, 3, 4, 9, -1, -3, 10]\n",
+    "result = 0\n",
+    "\n",
+    "for item in numbers:\n",
+    " if item < 0:\n",
+    "  continue # this will allow the code to skip all negative values and only consider postive values since positive values are to be added in the this example\n",
+    " \n",
+    " else:\n",
+    "  result += item\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "334c96f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here we want to add all negative numbers \n",
+    "\n",
+    "# in the example below, using the \"continue\" keyword will skip the positive numbers and continue to add all the negative numbers\n",
+    "\n",
+    "numbers = [2, 3, 5, 7, 4, -2, 3, 4, 9, -1, -3, 10]\n",
+    "result = 0\n",
+    "\n",
+    "for item in numbers:\n",
+    " if item > 0:\n",
+    "  continue # this will allow the code to skip all positive values and only consider negative values since negative values are to be added in the this example\n",
+    " \n",
+    " else:\n",
+    "  result += item\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "256ef3f9",
+   "metadata": {},
+   "source": [
+    "While loops\n",
+    "\n",
+    "This is used to evaluate a True or False as in the case of \"Boolean\". Here, a condition is created and if that is met, the code \n",
+    "performs the assigned task."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "119adb91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in this example, we want to return \"n\" so far as \"n\" is greater than 1\n",
+    "\n",
+    "# Method one \n",
+    "\n",
+    "n = 5\n",
+    "\n",
+    "while n > 1:\n",
+    "    print(n)\n",
+    "    n = (n-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5f825fc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in this example, we want to return \"n\" so far as \"n\" is greater than 1\n",
+    "\n",
+    "# Method two \n",
+    "\n",
+    "n = 5\n",
+    "\n",
+    "while True:\n",
+    "    print(n)\n",
+    "    n = (n-1)\n",
+    "    if n == 1:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25313063",
+   "metadata": {},
+   "source": [
+    "Question 1\n",
+    "\n",
+    "create a list with the names of friends and colleagues. Calculate the average lenght of the names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "14364156",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average length of the family names is 9.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def avg_name_length(family_name):\n",
+    "    total_name_length = sum(len(name) for name in family_name)\n",
+    "    avg_length = total_name_length / len(family_name)\n",
+    "    return avg_length\n",
+    "\n",
+    "family_name = ['Maame Bomo', 'Auntie Ena', 'DeKerm', 'Sis. Adjoechie', 'Homa', 'Amichia', 'Maame Yeboah', 'Maame Araba']\n",
+    "avg_length = avg_name_length(family_name)\n",
+    "print(f\"The average length of the family names is {avg_length:.1f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cd11d52",
+   "metadata": {},
+   "source": [
+    "Question 2\n",
+    "\n",
+    "Create a list with the names of family. Search for the name \"DeKerm\" using a for loop. Print not found if you didn't find it. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deb72d13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9ac399d",
+   "metadata": {},
+   "source": [
+    "Question 3\n",
+    "\n",
+    "Create a list of turples of first name, last name and age for your family members. If you don't know the age, put in NONE. Calculate the average age, skipping over any NON values. Print out each name, followed by \"old\" or \"young\" if the fall below the average age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3791a371",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
